fix spacing on admin items

--- a/style.scss
+++ b/style.scss
@@ -1117,7 +1117,7 @@ div#subnav.item-list-tabs {
 			border: none; 
 			font-size: 90%;
 			margin: 0;
-			padding: 4px 7px;
+			padding: 4px 12px;
 		}
 		&.current a {
 			background: transparent;
